--- a/static-web/styles/Home.module.css
+++ b/static-web/styles/Home.module.css
@@ -123,3 +123,14 @@
     flex-wrap: wrap;
     
 }
+.heading{
+    font-size: 3.5rem;
+    padding: .5rem 3.5rem;
+}
+.paragraph_container{
+   max-width: 50%;
+   padding: 1rem 3.5rem;
+}
+.profileicon_container{
+ padding: .5rem 3.5rem;
+}
